attempt #1 to make a bin script for running this on your codebase

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,9 @@
 {
-    "require": {
-        "squizlabs/php_codesniffer": "^3.5"
-    }
+	"require": {
+		"squizlabs/php_codesniffer": "^3.5"
+	},
+	"bin": [
+		"bin/nethercs",
+		"bin/nethercbf"
+	]
 }
