--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,14 @@
 {
+	"name":"netherphp/standards",
+	"description":"Documentation and PHPCS Standard for Nether Notation",
+	"keywords": [ "phpcs", "phpcbf", "nether", "coding-standard", "phpcodesniffer-standard" ],
+	"license":"BSD-3-Clause",
+	"authors":[
+		{ "name":"Bob Majdak Jr",
+		  "email":"bmajdak@php.net",
+		  "homepage":"http://twitter.com/bobmagicii",
+		  "role":"developer" }
+	],
 	"require": {
 		"squizlabs/php_codesniffer": "^3.5"
 	},
