--- a/.github/workflows/phpcbf-test.yml
+++ b/.github/workflows/phpcbf-test.yml
@@ -1,23 +1,20 @@
 name: PHPCBF Test
 on: [push]
 jobs:
-	- name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.operating-system }}
-	runs-on: ubuntu-latest
-		strategy:
-			matrix:
-				operating-system: [ 'ubuntu-latest', 'windows-latest' ]
-				php-versions: [ '7.1', '7.4' ]
-	steps:
-		- name: checkout
-		uses: actions/checkout@v2
-
-		- name: Setup PHP
-		uses: shivammathur/setup-php@v2
-		with:
-			php-versions: ['7.1','7.4']
-			extensions: mbstring, intl
-			tools: phpcs
-
-		- name: PHPCBF
-		run: phpcs TestCode/*.fixed.php
-
+  name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.operating-system }}
+  runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        operating-system: [ 'ubuntu-latest', 'windows-latest' ]
+        php-versions: [ '7.1', '7.4' ]
+  steps:
+  - name: checkout
+    uses: actions/checkout@v2
+  - name: Setup PHP
+    uses: shivammathur/setup-php@v2
+    with:
+      php-versions: ['7.1','7.4']
+      extensions: mbstring, intl
+      tools: phpcs
+  - name: PHPCBF
+    run: phpcs TestCode/*.fixed.php
