--- a/.github/workflows/phpcbf-test.yml
+++ b/.github/workflows/phpcbf-test.yml
@@ -2,7 +2,7 @@ name: PHPCBF Test
 on: [push]
 jobs:
   name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.operating-system }}
-  runs-on: ubuntu-latest
+  runs-on:
     strategy:
       matrix:
         operating-system: [ 'ubuntu-latest', 'windows-latest' ]
