--- a/.github/workflows/phpcbf-test.yml
+++ b/.github/workflows/phpcbf-test.yml
@@ -18,4 +18,8 @@ jobs:
           extensions: mbstring, intl
           tools: phpcs
       - name: PHPCBF
-        run: phpcs TestCode/*.fixed.php
+        if: matrix.os == 'ubuntu-latest'
+          run: phpcs TestCode/*.fixed.php
+        if: matrix.os == 'windows-latest'
+          run: phpcs TestCode\*.fixed.php
+
