--- a/.github/workflows/phpcbf-test.yml
+++ b/.github/workflows/phpcbf-test.yml
@@ -17,9 +17,12 @@ jobs:
           coverage: none
           extensions: mbstring, intl
           tools: phpcs
-      - name: PHPCBF
+      - name: PHPCS on Linux
         if: matrix.os == 'ubuntu-latest'
-          run: phpcs TestCode/*.fixed.php
+          run: |
+            phpcs TestCode/*.fixed.php
+      - name: PHPCS on Windows
         if: matrix.os == 'windows-latest'
-          run: phpcs TestCode\*.fixed.php
+          run: |
+            phpcs TestCode\*.fixed.php
 
