--- a/.github/workflows/phpcbf-test.yml
+++ b/.github/workflows/phpcbf-test.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         operating-system: [ 'ubuntu-latest', 'windows-latest' ]
-        php-versions: [ '7.1', '7.4' ]
+        php-versions: [ '8.0' ]
     steps:
       - name: Checkout Source.
         uses: actions/checkout@v2
